data/derived/fa15/progs/unify/prog0511.ml.out
Characters 73-77:
  let fixpoint (f,b) = wwhile ((let f' b = let b' = f b in (b', b' = b) in f' 1), b);;
                                                                           ^^^^
Error: This expression has type int * bool
       but an expression was expected of type 'a -> 'a * bool
